--- a/multi.ipynb
+++ b/multi.ipynb
@@ -281,33 +281,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 29,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "ename": "KeyError",
-     "evalue": "\"['expressivity' 'class_count' 'indiv_count' 'obj_property_count'\\n 'dataproperty_count' 'datatypes_count' 'Cyclic Cls' 'HC_Cohesion'\\n 'HC_MAX_DEPTH' 'HC_Max_Sibling' 'HC_Avg_Sibling' 'C_Tangledness'\\n 'C_MaxTangledness' 'HP_Cohesion' 'P_Tangledness' 'P_MaxTangledness'\\n 'HP_MAX_DEPTH' 'HP_Max_Sibling' 'HP_Avg_Sibling' 'OP_Cohesion'\\n 'Onto_Cohesion' 'RRichness' 'AttRichness' 'UI' 'EUR' 'Axioms_count'\\n 'AxiomsLogical_count' 'Tbox_size' 'Abox_size' 'Rbox_size' 'Tbox_ratio'\\n 'Abox_ratio' 'Rbox_ratio' 'GCI' 'PCD' 'NPCD' 'GCI_Ratio' 'PCD_Ratio'\\n 'NPCD_Ratio' 'MaxNesting' 'AvgNesting' 'ClsDisjoinedRatio'\\n 'ClsWithNominalsRatio' 'IndivSameRatio' 'IndivDiffRatio'\\n 'NominalsTBoxRatio' 'MaxACC' 'OntoCCDensity' 'Intersection' 'Union'\\n 'Existentiel' 'Universal' 'LeastCardinality' 'MostCardinality'\\n 'ExactCardinality' 'avgValuesCard' 'LogestMCard' 'LogestLCard'\\n 'LogestECard' 'Complement' 'OneOf' 'HasValue' 'HasSelf' 'InversePropRatio'\\n 'TransitivePropRatio' 'ReflexivePropRatio' 'IrreflexivePropRatio'\\n 'SymmetricPropRatio' 'AsymmetricPropRatio' 'FunctionalPropRatio'\\n 'InverseFuncPropRatio' 'HierarchyPropRatio' 'SubClassOf'\\n 'InverseObjectProperties' 'SubObjectPropertyOf' 'FunctionalObjectProperty'\\n 'TransitiveObjectProperty' 'EquivalentClasses' 'DisjointClasses'\\n 'SubPropertyChainOf' 'ObjectPropertyRange' 'ObjectPropertyDomain'\\n 'DisjointUnion' 'ClassAssertion' 'DataPropertyRange' 'DataPropertyDomain'\\n 'ObjectPropertyAssertion' 'DataPropertyAssertion' 'DifferentIndividuals'\\n 'SymmetricObjectProperty' 'ReflexiveObjectProperty'\\n 'InverseFunctionalObjectProperty' 'EquivalentDataProperties'\\n 'SameIndividual' 'EquivalentObjectProperties' 'SubDataPropertyOf'\\n 'FunctionalDataProperty' 'IrrefexiveObjectProperty'\\n 'AsymmetricObjectProperty' 'DisjointObjectProperties'] not in index\"",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-22-35356e8bdada>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     16\u001b[0m \u001b[0mtrain_features\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtrain_features\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mcols\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     17\u001b[0m \u001b[0mtest_features\u001b[0m  \u001b[1;33m=\u001b[0m \u001b[0mtest_features\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mcols\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 18\u001b[1;33m \u001b[0mtrain_target\u001b[0m   \u001b[1;33m=\u001b[0m \u001b[0mtrain_target\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mcols\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     19\u001b[0m \u001b[0mtest_target\u001b[0m    \u001b[1;33m=\u001b[0m \u001b[0mtest_target\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mcols\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     20\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mC:\\Users\\Hemant\\AppData\\Local\\conda\\conda\\envs\\aind-dog\\lib\\site-packages\\pandas\\core\\frame.py\u001b[0m in \u001b[0;36m__getitem__\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   2131\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0misinstance\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mSeries\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mndarray\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mIndex\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlist\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   2132\u001b[0m             \u001b[1;31m# either boolean or fancy integer index\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 2133\u001b[1;33m             \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_getitem_array\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   2134\u001b[0m         \u001b[1;32melif\u001b[0m \u001b[0misinstance\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mDataFrame\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   2135\u001b[0m             \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_getitem_frame\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mC:\\Users\\Hemant\\AppData\\Local\\conda\\conda\\envs\\aind-dog\\lib\\site-packages\\pandas\\core\\frame.py\u001b[0m in \u001b[0;36m_getitem_array\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   2175\u001b[0m             \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_take\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mindexer\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mconvert\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mFalse\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   2176\u001b[0m         \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 2177\u001b[1;33m             \u001b[0mindexer\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mloc\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_convert_to_indexer\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   2178\u001b[0m             \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_take\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mindexer\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mconvert\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mTrue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   2179\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mC:\\Users\\Hemant\\AppData\\Local\\conda\\conda\\envs\\aind-dog\\lib\\site-packages\\pandas\\core\\indexing.py\u001b[0m in \u001b[0;36m_convert_to_indexer\u001b[1;34m(self, obj, axis, is_setter)\u001b[0m\n\u001b[0;32m   1267\u001b[0m                 \u001b[1;32mif\u001b[0m \u001b[0mmask\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0many\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1268\u001b[0m                     raise KeyError('{mask} not in index'\n\u001b[1;32m-> 1269\u001b[1;33m                                    .format(mask=objarr[mask]))\n\u001b[0m\u001b[0;32m   1270\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1271\u001b[0m                 \u001b[1;32mreturn\u001b[0m \u001b[0m_values_from_object\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mindexer\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mKeyError\u001b[0m: \"['expressivity' 'class_count' 'indiv_count' 'obj_property_count'\\n 'dataproperty_count' 'datatypes_count' 'Cyclic Cls' 'HC_Cohesion'\\n 'HC_MAX_DEPTH' 'HC_Max_Sibling' 'HC_Avg_Sibling' 'C_Tangledness'\\n 'C_MaxTangledness' 'HP_Cohesion' 'P_Tangledness' 'P_MaxTangledness'\\n 'HP_MAX_DEPTH' 'HP_Max_Sibling' 'HP_Avg_Sibling' 'OP_Cohesion'\\n 'Onto_Cohesion' 'RRichness' 'AttRichness' 'UI' 'EUR' 'Axioms_count'\\n 'AxiomsLogical_count' 'Tbox_size' 'Abox_size' 'Rbox_size' 'Tbox_ratio'\\n 'Abox_ratio' 'Rbox_ratio' 'GCI' 'PCD' 'NPCD' 'GCI_Ratio' 'PCD_Ratio'\\n 'NPCD_Ratio' 'MaxNesting' 'AvgNesting' 'ClsDisjoinedRatio'\\n 'ClsWithNominalsRatio' 'IndivSameRatio' 'IndivDiffRatio'\\n 'NominalsTBoxRatio' 'MaxACC' 'OntoCCDensity' 'Intersection' 'Union'\\n 'Existentiel' 'Universal' 'LeastCardinality' 'MostCardinality'\\n 'ExactCardinality' 'avgValuesCard' 'LogestMCard' 'LogestLCard'\\n 'LogestECard' 'Complement' 'OneOf' 'HasValue' 'HasSelf' 'InversePropRatio'\\n 'TransitivePropRatio' 'ReflexivePropRatio' 'IrreflexivePropRatio'\\n 'SymmetricPropRatio' 'AsymmetricPropRatio' 'FunctionalPropRatio'\\n 'InverseFuncPropRatio' 'HierarchyPropRatio' 'SubClassOf'\\n 'InverseObjectProperties' 'SubObjectPropertyOf' 'FunctionalObjectProperty'\\n 'TransitiveObjectProperty' 'EquivalentClasses' 'DisjointClasses'\\n 'SubPropertyChainOf' 'ObjectPropertyRange' 'ObjectPropertyDomain'\\n 'DisjointUnion' 'ClassAssertion' 'DataPropertyRange' 'DataPropertyDomain'\\n 'ObjectPropertyAssertion' 'DataPropertyAssertion' 'DifferentIndividuals'\\n 'SymmetricObjectProperty' 'ReflexiveObjectProperty'\\n 'InverseFunctionalObjectProperty' 'EquivalentDataProperties'\\n 'SameIndividual' 'EquivalentObjectProperties' 'SubDataPropertyOf'\\n 'FunctionalDataProperty' 'IrrefexiveObjectProperty'\\n 'AsymmetricObjectProperty' 'DisjointObjectProperties'] not in index\""
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Hemant\\AppData\\Local\\conda\\conda\\envs\\aind-dog\\lib\\site-packages\\ipykernel\\__main__.py:7: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "expressivity\n",
+      "expressivity\n",
+      "Konclude_status\n",
+      "More_status\n",
+      "Hermit_status\n",
+      "Fact++_status\n",
+      "TrOWL_status\n",
+      "JFact_status\n",
+      "Konclude_status\n",
+      "More_status\n",
+      "Hermit_status\n",
+      "Fact++_status\n",
+      "TrOWL_status\n",
+      "JFact_status\n"
      ]
     }
    ],
    "source": [
+    "from sklearn import preprocessing\n",
+    "\n",
     "def df_lbl_enc(df):\n",
     "    for c in df.columns:\n",
     "        if df[c].dtype == 'object':\n",
     "            lbl = preprocessing.LabelEncoder()\n",
     "            df[c] = lbl.fit_transform(df[c])\n",
-    "            print(c)\n",
+    "            #print(c)\n",
     "    return df\n",
     "\n",
     "train_features = features.loc[features['Set'] == \"Train\"] \n",
@@ -315,16 +334,55 @@
     "train_target  = target.loc[target['Set'] == \"Train\"] \n",
     "test_target   = target.loc[target['Set'] == \"Test\"]\n",
     "\n",
-    "cols = [c for c in features if c not in ['Set','Profile']]\n",
-    "cols = [c for c in features if c not in ['Set','Profile']]\n",
+    "features_cols = [c for c in features if c not in ['Set','Profile']]\n",
+    "target_cols = [c for c in target if c not in ['Set','Profile']]\n",
     "\n",
-    "train_features = train_features[cols]\n",
-    "test_features  = test_features[cols]\n",
-    "train_target   = train_target[cols]\n",
-    "test_target    = test_target[cols]\n",
+    "train_features = df_lbl_enc(train_features[features_cols])\n",
+    "test_features  = df_lbl_enc(test_features[features_cols])\n",
+    "train_target   = df_lbl_enc(train_target[target_cols])\n",
+    "test_target    = df_lbl_enc(test_target[target_cols])\n",
     "\n",
-    "train_target.head()\n",
+    "\n",
     "#test_cols = [c for c in test_features if c not in ['Set','Profile']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(550, 100) (550, 12) (537, 100) (537, 12)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(train_features.shape, train_target.shape, test_features.shape, test_target.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-0.604395851651\n"
+     ]
+    }
+   ],
+   "source": [
+    "clf1 = RandomForestRegressor(100).fit(train_features, train_target)\n",
+    "print(clf1.score(test_features,test_target))"
    ]
   }
  ],
